--- a/src/app/movies-list/movies-list.html
+++ b/src/app/movies-list/movies-list.html
@@ -1,15 +1,7 @@
 <div class="main-content">
+    <!--Afficher une liste de -->
   <div class="mt-3">
-    <h4 class="ms-5 mb-0">Tendances</h4>
-    <div>
-      <div class="d-flex align-items-center ms-5 overflow-x-auto container-movies">
-        <app-movie-card></app-movie-card>
-      </div>
-    </div>
-  </div>
-
-  <div class="mt-3">
-    <h4 class="ms-5 mb-0">Genres</h4>
+    <h4 class="ms-5 mb-0">Liste des films</h4>
     <div>
       <div class="d-flex align-items-center ms-5 overflow-x-auto container-movies">
         <app-movie-card></app-movie-card>
