--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -3,8 +3,15 @@
   <a class="navbar-brand fw-bold text-warning" routerLink="/">Cinézone</a>
 
   <!-- Menu burger -->
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -18,7 +25,7 @@
 
     <!-- Barre de recherche -->
     <form class="d-flex me-auto">
-      <input class="form-control me-2" type="search" placeholder="Rechercher un film...">
+      <input class="form-control me-2" type="search" placeholder="Rechercher un film..." />
       <button class="btn btn-outline-warning" type="submit">Rechercher</button>
     </form>
 
