La liste s'affiche youpi

--- a/src/app/movie-card/movie-card.html
+++ b/src/app/movie-card/movie-card.html
@@ -1,12 +1,12 @@
-<div class="movies-list">
-  @for (movie of movies; track $index) {
-    <div class="me-2 movie"
-         style="background-image: url('https://placehold.co/200x300');
-                background-size: cover;
-                background-position: center;">
-      <div class="movie-title">{{ movie.title }}</div>
-      <div class="placeholder-poster"></div>
-    </div>
-  }
+<div
+  class="me-2 movie"
+  style="
+    background-image: url('https://placehold.co/200x300');
+    background-size: cover;
+    background-position: center;
+  "
+>
+  <div class="movie-title">{{ data.title }}</div>
+  <div class="movie-title">{{ data.director }}</div>
+  <div class="placeholder-poster"></div>
 </div>
-
