--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -19,8 +19,12 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <!-- Liens à gauche -->
     <ul class="navbar-nav me-3">
-      <li class="nav-item"><a class="nav-link" routerLink="/">Accueil</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/movies">Films</a></li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/" aria-current="page">Accueil</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/movies">Films</a>
+      </li>
     </ul>
 
     <!-- Barre de recherche -->
