--- a/src/app/movies-list/movies-list.html
+++ b/src/app/movies-list/movies-list.html
@@ -1,11 +1,13 @@
-<div class="main-content">
-    <!--Afficher une liste de -->
-  <div class="mt-3">
-    <h4 class="ms-5 mb-0">Liste des films</h4>
-    <div>
-      <div class="d-flex align-items-center ms-5 overflow-x-auto container-movies">
-        <app-movie-card></app-movie-card>
-      </div>
+<div class="main-content"></div>
+
+<!--Afficher une liste de films-->
+<div class="mt-3">
+  <h4 class="ms-5 mb-0">Liste des films</h4>
+  <div>
+    <div class="d-flex align-items-center ms-5 overflow-x-auto container-movies">
+      @for(movie of movies; track movie.id){
+      <app-movie-card [data]="movie" />
+      }
     </div>
   </div>
 </div>
